--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documentum</title>
+    <link rel="stylesheet" href="index-style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">World's best lasagna!</a>
+    <h1><ul>Odin Recipes</ul></h1>
+    <a id="lasagna-link" href="recipes/lasagna.html">World's best lasagna!</a>
 
 </body>
 </html> 
