finished css styling to lasagna page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <h1><ul>Odin Recipes</ul></h1>
-    <a id="lasagna-link" href="recipes/lasagna.html">World's best lasagna!</a>
-
+    <a id="lasagna-link" href="recipes/lasagna.html">World's best lasagna!😋</a>
 </body>
 </html> 
