--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -25,8 +25,10 @@
       </ul>
     </header>
     <main>
-        <h1 id="h1">World's best lasagna!</h1>
-        <img id="lasagna-image"src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg">
+        <div class="title-section">
+            <h1 id="h1">World's best lasagna!</h1>
+            <img id="lasagna-image"src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg">
+        </div>
         
         <div class="description">
             <h2 id="description">Description</h2>
